# ga_points_downsampler

./: CMakeLists.txt  README.md  package.xml
include/cuda_points_downsampler/: cuda_points_downsampler.h
include/ga_points_downsampler/: ga_points_downsampler.h
include/pcl_points_downsampler/: pcl_points_downsampler.h
launch/: cuda_points_downsampler.launch  ga_points_downsampler.launch  pcl_points_downsampler.launch  pub_pcd_11w.launch  pub_pcd_22w.launch  pub_pcd_300w.launch
src/: CMakeLists.txt
src/cuda_points_downsampler/: CMakeLists.txt  cuda_points_downsampler.cu  cuda_points_downsampler_node.cpp
src/ga_points_downsampler/: CMakeLists.txt  ga_points_downsampler.cu  ga_points_downsampler_node.cpp
src/pcl_points_downsampler/: CMakeLists.txt  pcl_points_downsampler.cpp  pcl_points_downsampler_node.cpp
