<?xml version="1.0"?>
<package format="2">
    <name>ga_points_downsampler</name>
    <version>1.1.0</version>
    <description>The hdl_localization package</description>

    <maintainer email="bzlrobot@countrygarden.com.cn"></maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <depend>diagnostic_msgs</depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <depend>ga_cmake</depend>
    <depend>cupoch_contrib</depend>
    <depend>cupoch_conversions</depend>
    <depend>cuda_pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>open3d_conversions</depend>
    <depend>geometry_msgs</depend>
    <depend>message_runtime</depend>
    <depend>message_generation</depend>
</package>
